--- a/admin-blog.html
+++ b/admin-blog.html
@@ -72,171 +72,151 @@
 </div>
 
 <script>
-  // --- Supabaseを共通参照 ---
-  var sb = window.supabase;
-  if (!sb) {
-    alert("Supabaseが初期化されていません。トップページを再読み込みしてください。");
-  }
-
-  // このページ専用のユーティリティ
-  var $b = s => document.querySelector(s);
-
-  const tbody = $b("#articlesTable tbody");
-  let currentPage = 1;
-  const pageSize = 10;
-  let currentSearch = "";
-  let currentMonth = "";
-  let editor;
-
-  // --- CKEditor 二重読み込み防止 ---
-  if (!window._ckeditorLoadedBlog) {
-    window._ckeditorLoadedBlog = true;
-    ClassicEditor.create(document.querySelector('#content'))
-      .then(newEditor => { editor = newEditor; })
-      .catch(error => console.error(error));
-  } else {
-    const editorContainer = document.querySelector('#content');
-    if (editorContainer && editorContainer.ckeditorInstance) {
-      editor = editorContainer.ckeditorInstance;
+  async function initBlogAdmin() {
+    // --- Supabase初期化 ---
+    if (!window.supabase) {
+      window.supabase = createClient(
+        window.env.NEXT_PUBLIC_SUPABASE_URL,
+        window.env.NEXT_PUBLIC_SUPABASE_ANON_KEY
+      );
     }
-  }
+    const sb = window.supabase;
 
-  async function loadMonths() {
-    const { data, error } = await sb.from("articles").select("created_at");
-    if (error) return;
-    const months = [...new Set(data.map(r => {
-      const d = new Date(r.created_at);
-      return d.getFullYear() + "-" + String(d.getMonth() + 1).padStart(2, "0");
-    }))].sort().reverse();
-    $b("#monthFilter").innerHTML = '<option value="">すべての年月</option>' +
-      months.map(m => `<option value="${m}">${m}</option>`).join("");
-  }
-
-  async function loadArticles() {
-    let query = sb.from("articles")
-      .select("*", { count: "exact" })
-      .order("created_at", { ascending: false })
-      .range((currentPage - 1) * pageSize, currentPage * pageSize - 1);
-
-    if (currentSearch) {
-      query = query.or(`title.ilike.%${currentSearch}%,slug.ilike.%${currentSearch}%`);
-    }
-    if (currentMonth) {
-      const [y, m] = currentMonth.split("-");
-      const start = new Date(y, m - 1, 1).toISOString();
-      const end = new Date(y, m, 0, 23, 59, 59).toISOString();
-      query = query.gte("created_at", start).lte("created_at", end);
+    // 認証確認
+    const { data, error: authErr } = await sb.auth.getSession();
+    if (!data.session) {
+      window.location.href = "/admin-index.html";
+      return;
     }
 
-    const { data, count, error } = await query;
-    if (error) { console.error(error); return; }
+    const $ = s => document.querySelector(s);
+    const tbody = $("#articlesTable tbody");
+    let currentPage = 1;
+    const pageSize = 10;
+    let currentSearch = "";
+    let currentMonth = "";
+    let editor;
 
-    tbody.innerHTML = (data || []).map(a => `
-      <tr onclick="editArticle('${a.id}')">
-        <td>${a.title || ""}</td>
-        <td>${a.slug || ""}</td>
-        <td>${a.category || ""}</td>
-        <td>${Array.isArray(a.tags) ? a.tags.join(",") : ""}</td>
-        <td>${a.published ? "公開" : "非公開"}</td>
-        <td>${new Date(a.created_at).toLocaleDateString()}</td>
-      </tr>`).join("");
+    // --- CKEditor初期化 ---
+    if (!window._ckeditorInitDone) {
+      window._ckeditorInitDone = true;
+      ClassicEditor.create(document.querySelector('#content'))
+        .then(e => { editor = e; })
+        .catch(console.error);
+    } else {
+      editor = window._ckeditorInstance;
+    }
 
-    const totalPages = Math.ceil((count || 1) / pageSize);
-    $b("#pageInfo").textContent = `${currentPage} / ${totalPages}`;
-  }
+    async function loadMonths() {
+      const { data, error } = await sb.from("articles").select("created_at");
+      if (error) return;
+      const months = [...new Set(data.map(r => {
+        const d = new Date(r.created_at);
+        return d.getFullYear() + "-" + String(d.getMonth() + 1).padStart(2, "0");
+      }))].sort().reverse();
+      $("#monthFilter").innerHTML = '<option value="">すべての年月</option>' +
+        months.map(m => `<option value="${m}">${m}</option>`).join("");
+    }
 
-  async function editArticle(id) {
-    const { data, error } = await sb.from("articles").select("*").eq("id", id).single();
-    if (error) { console.error(error); return; }
+    async function loadArticles() {
+      let query = sb.from("articles")
+        .select("*", { count: "exact" })
+        .order("created_at", { ascending: false })
+        .range((currentPage - 1) * pageSize, currentPage * pageSize - 1);
+      if (currentSearch) query = query.or(`title.ilike.%${currentSearch}%,slug.ilike.%${currentSearch}%`);
+      if (currentMonth) {
+        const [y, m] = currentMonth.split("-");
+        const start = new Date(y, m - 1, 1).toISOString();
+        const end = new Date(y, m, 0, 23, 59, 59).toISOString();
+        query = query.gte("created_at", start).lte("created_at", end);
+      }
+      const { data, count, error } = await query;
+      if (error) { console.error(error); return; }
 
-    $b("#articleId").value = data.id;
-    $b("#title").value = data.title || "";
-    $b("#slug").value = data.slug || "";
-    $b("#description").value = data.description || "";
-    if (editor) editor.setData(data.content || "");
-    $b("#thumbnail").value = data.thumbnail_url || "";
-    $b("#category").value = data.category || "";
-    $b("#tags").value = Array.isArray(data.tags) ? data.tags.join(",") : "";
-    $b("#published").checked = data.published;
-  }
+      tbody.innerHTML = (data || []).map(a => `
+        <tr onclick="editArticle('${a.id}')">
+          <td>${a.title || ""}</td>
+          <td>${a.slug || ""}</td>
+          <td>${a.category || ""}</td>
+          <td>${Array.isArray(a.tags) ? a.tags.join(",") : ""}</td>
+          <td>${a.published ? "公開" : "非公開"}</td>
+          <td>${new Date(a.created_at).toLocaleDateString()}</td>
+        </tr>`).join("");
+      $("#pageInfo").textContent = `${currentPage} / ${Math.ceil((count || 1) / pageSize)}`;
+    }
 
-  function newArticle() {
-    $b("#articleId").value = "";
-    $b("#articleForm").reset();
-    if (editor) editor.setData("");
-  }
-
-  async function saveArticle() {
-    const id = $b("#articleId").value;
-    const tagsValue = $b("#tags").value.trim();
-    const tags = tagsValue === "" ? [] : tagsValue.split(",").map(t => t.trim()).filter(t => t);
-
-    const row = {
-      title: $b("#title").value,
-      slug: $b("#slug").value,
-      description: $b("#description").value,
-      content: editor ? editor.getData() : "",
-      thumbnail_url: $b("#thumbnail").value,
-      category: $b("#category").value,
-      tags: tags,
-      published: $b("#published").checked
+    window.editArticle = async function(id) {
+      const { data, error } = await sb.from("articles").select("*").eq("id", id).single();
+      if (error) return console.error(error);
+      $("#articleId").value = data.id;
+      $("#title").value = data.title || "";
+      $("#slug").value = data.slug || "";
+      $("#description").value = data.description || "";
+      if (editor) editor.setData(data.content || "");
+      $("#thumbnail").value = data.thumbnail_url || "";
+      $("#category").value = data.category || "";
+      $("#tags").value = Array.isArray(data.tags) ? data.tags.join(",") : "";
+      $("#published").checked = data.published;
     };
 
-    let res;
-    if (id) {
-      res = await sb.from("articles").update(row).eq("id", id).select();
-    } else {
-      res = await sb.from("articles").insert(row).select();
-    }
-    if (res.error) {
-      alert("保存エラー:" + res.error.message);
-    } else {
-      alert("保存しました");
+    window.newArticle = function() {
+      $("#articleId").value = "";
+      $("#articleForm").reset();
+      if (editor) editor.setData("");
+    };
+
+    window.saveArticle = async function() {
+      const id = $("#articleId").value;
+      const tagsValue = $("#tags").value.trim();
+      const tags = tagsValue ? tagsValue.split(",").map(t => t.trim()).filter(t => t) : [];
+
+      const row = {
+        title: $("#title").value,
+        slug: $("#slug").value,
+        description: $("#description").value,
+        content: editor ? editor.getData() : "",
+        thumbnail_url: $("#thumbnail").value,
+        category: $("#category").value,
+        tags: tags,
+        published: $("#published").checked
+      };
+
+      const res = id
+        ? await sb.from("articles").update(row).eq("id", id).select()
+        : await sb.from("articles").insert(row).select();
+
+      if (res.error) alert("保存エラー:" + res.error.message);
+      else { alert("保存しました"); loadArticles(); loadMonths(); }
+    };
+
+    window.deleteArticle = async function() {
+      const id = $("#articleId").value;
+      if (!id) return alert("記事を選択してください");
+      if (!confirm("削除しますか？")) return;
+      const { error } = await sb.from("articles").delete().eq("id", id);
+      if (error) alert("削除エラー:" + error.message);
+      else { alert("削除しました"); loadArticles(); newArticle(); loadMonths(); }
+    };
+
+    window.applyFilters = function() {
+      currentSearch = $("#searchBox").value.trim();
+      currentMonth = $("#monthFilter").value;
+      currentPage = 1;
       loadArticles();
-      loadMonths();
-    }
+    };
+    window.prevPage = function() { if (currentPage > 1) { currentPage--; loadArticles(); } };
+    window.nextPage = function() { currentPage++; loadArticles(); };
+
+    await loadArticles();
+    await loadMonths();
   }
 
-  async function deleteArticle() {
-    const id = $b("#articleId").value;
-    if (!id) { alert("記事を選択してください"); return; }
-    if (!confirm("削除しますか？")) return;
-    const { error } = await sb.from("articles").delete().eq("id", id);
-    if (error) {
-      alert("削除エラー:" + error.message);
-    } else {
-      alert("削除しました");
-      loadArticles();
-      newArticle();
-      loadMonths();
-    }
+  // --- ページ切替時の再実行を保証 ---
+  if (!window._blogAdminInitialized) {
+    window._blogAdminInitialized = true;
+    setTimeout(initBlogAdmin, 100);
+  } else {
+    setTimeout(initBlogAdmin, 100);
   }
-
-  function applyFilters() {
-    currentSearch = $b("#searchBox").value.trim();
-    currentMonth = $b("#monthFilter").value;
-    currentPage = 1;
-    loadArticles();
-  }
-
-  function prevPage() {
-    if (currentPage > 1) { currentPage--; loadArticles(); }
-  }
-
-  function nextPage() {
-    currentPage++; loadArticles();
-  }
-
-  // --- 初期化 ---
-  loadArticles();
-  loadMonths();
-
-  // --- 関数をwindowに登録（ページ切替対応） ---
-  window.editArticle = editArticle;
-  window.newArticle = newArticle;
-  window.saveArticle = saveArticle;
-  window.deleteArticle = deleteArticle;
-  window.applyFilters = applyFilters;
-  window.prevPage = prevPage;
-  window.nextPage = nextPage;
 </script>
+
