--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
     <!-- SNS Section -->
     <section id="sns" class="py-20 bg-waju-light">
-      <div class="max-w-4xl mx-auto w-full px-0 sm:px-6 text-center">
+      <div class="w-full px-0 sm:px-6 text-center">
 
         <h2 class="text-4xl font-extrabold text-waju-primary mb-12 relative after:content-[''] after:block after:w-16 after:h-1 after:bg-waju-accent after:mx-auto after:mt-2">SNS</h2>
     
